--- a/src/components/AboutSection/style.css
+++ b/src/components/AboutSection/style.css
@@ -1,6 +1,6 @@
 #about-me {
     border: 1px solid #fda387;
-    padding: 50px;
+    padding: 7%;
     border-radius: 20px;
 }
 
@@ -9,3 +9,14 @@
     margin-bottom: 100px;
     padding-top: 30px;
 }
+
+@media only screen and (min-width: 769px) {
+    #about-me-container {
+        margin-top: 245px;
+        padding-top: 200px;
+        width: 65%;
+        padding-left: 35%;
+    } 
+}
+
+
