--- a/src/components/HomeHeader/style.css
+++ b/src/components/HomeHeader/style.css
@@ -20,3 +20,40 @@
   animation: fadeInRight;
   animation-duration: 3s;
 }
+
+
+@media only screen and (max-width: 390px) {
+  #my-name {
+      font-size: 36px;
+  }
+
+  .subtitle {
+      font-size: 12px;
+  }
+} 
+
+@media only screen and (min-width: 460px) {
+  .subtitle {
+      font-weight: 100;
+  }
+}
+
+@media only screen and (min-width: 560px) {
+  #title-container {
+      padding-left: 30%;
+  }   
+}
+
+@media only screen and (min-width: 769px) {
+  #title-container {
+      padding-top: 100px;
+      padding-left: 50%;
+      width: 50%;
+  }   
+}
+
+@media only screen and (min-width: 960px) {
+  .subtitle {
+      font-size: 18px;
+  }
+}
