added resume. updated profile pic. fade-in background image

--- a/src/components/SkillsCard/style.css
+++ b/src/components/SkillsCard/style.css
@@ -7,6 +7,21 @@
     color: #fda387;
 }
 
+.slide-left {
+  animation: slideInLeft;
+  animation-duration: 3s;
+}
+
+.slide-right {
+  animation: slideInRight;
+  animation-duration: 3s;
+}
+
+.slide-up {
+  animation: slideInUp;
+  animation-duration: 3s;
+}
+
 @media only screen and (min-width: 960px) {
     .design-card-footer {
         position: absolute;
