--- a/src/components/BackgroundImage/style.css
+++ b/src/components/BackgroundImage/style.css
@@ -2,4 +2,6 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    animation: fadeIn;
+    animation-duration: 3s;
 }
